create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -489,6 +489,10 @@ h6,
   background-color: #f2f2f2;
   border-color: #f2f2f2;
 }
+#header3-r .mbr-section-title,
+#header3-r .mbr-section-subtitle {
+  text-align: center;
+}
 #features1-q .striped .mbr-cards-col:nth-child(2n+1) {
   background-color: #2e2e2e;
 }
