create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -489,8 +489,8 @@ h6,
   background-color: #f2f2f2;
   border-color: #f2f2f2;
 }
-#header3-r .mbr-section-title,
-#header3-r .mbr-section-subtitle {
+#header3-s .mbr-section-title,
+#header3-s .mbr-section-subtitle {
   text-align: center;
 }
 #features1-q .striped .mbr-cards-col:nth-child(2n+1) {
